<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context="com.renegades.eatsafe.SoilInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_gathered"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="320dp"
                android:layout_height="250dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="25dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTemperature"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"/>

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"/>
                    <TextView
                        android:id="@+id/tvPressure"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"/>
                    <TextView
                        android:id="@+id/tvSoilMoisture"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/soil_moisture"/>
                    <TextView
                        android:id="@+id/tvAirQuality"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/air_quality"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <Button
            android:id="@+id/btResult"
            android:textColor="@android:color/white"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_back"
            android:text="@string/get_result" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>