<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.renegades.eatsafe.MenuActivity">

    <TextView
        android:text="@string/choose_your_option"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="320dp"
            android:layout_height="250dp"
            app:cardBackgroundColor="#d3d3d3"
            app:cardCornerRadius="25dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btFertility"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_soil_fertility"
                    android:background="@drawable/button_back"
                    android:textColor="@android:color/white"/>
                <Button
                    android:id="@+id/btQuality"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_quality"
                    android:background="@drawable/button_back"
                    android:textColor="@android:color/white"/>
                <Button
                    android:id="@+id/btHistory"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_history"
                    android:background="@drawable/button_back"
                    android:textColor="@android:color/white"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>
    </RelativeLayout>

</LinearLayout>
