<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.renegades.eatsafe.QualityResultActivity">

    <TextView
        android:text="@string/result"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="320dp"
            android:layout_height="250dp"
            app:cardBackgroundColor="#d3d3d3"
            app:cardCornerRadius="25dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/quality_of_crop"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvGrade"
                    android:layout_marginTop="20dp"
                    tools:text="Grade"
                    android:textSize="40sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btDone"
                    android:background="@drawable/button_back"
                    android:text="@string/done"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>







        </android.support.v7.widget.CardView>

    </RelativeLayout>

</LinearLayout>
